# voxel-demo

./: .cursorrules  .gitignore
game/: Cargo.toml  build.rs
game/src/: main.rs  player.rs  terrain.rs
game/src/stdb/: chunk_mesh_table.rs  chunk_mesh_type.rs  chunk_vertex_table.rs  chunk_vertex_type.rs  material_definition_table.rs  material_definition_type.rs  mesh_table.rs  mesh_type.rs  mod.rs  on_chunk_requested_reducer.rs  on_material_defined_reducer.rs  xz_coords_type.rs
game/src/terrain/: dirtychunks.rs  mod.rs  plugin.rs  systems.rs  types.rs  ui.rs
generator/: .gitignore  Cargo.toml  build.rs
generator/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/entity/: entity.rs  mesh.rs  mod.rs  player.rs
server/src/terrain/: chunk.rs  coords.rs  density.rs  heightmap.rs  lib.rs  material.rs  mesh.rs  mod.rs  prelude.rs
server/src/terrain/generator/: heightmap.rs  mesh.rs  mod.rs
server/src/terrain/generator/tests/: heightmap_tests.rs  mesh_tests.rs  mod.rs
terrain/: Cargo.toml
terrain/src/: coords.rs  heightmap.rs  material.rs  mesh.rs
