[package]
name = "voxel-demo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
terrain = { path = "../terrain", features = [ "server" ] }
spacetimedb = "1.1.1"
log = "0.4"
