[package]
name = "realm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.1.1"
log = "0.4"
noise = "0.9.0"
once_cell = "1.21.3"
nalgebra = "0.33"

[dev-dependencies]
approx = "0.5.1"
test-case = "3.3.1"
